--- a/src/wp-content/themes/allindata-dgr/sass/style.scss
+++ b/src/wp-content/themes/allindata-dgr/sass/style.scss
@@ -7,3 +7,5 @@
 @import "../vendor/twbs/bootstrap/scss/bootstrap-reboot";
 @import "../vendor/twbs/bootstrap/scss/bootstrap";
 @import "../vendor/twbs/bootstrap/scss/bootstrap-grid";
+
+@import "layout";
