--- a/src/wp-content/themes/allindata-dgr/style.css
+++ b/src/wp-content/themes/allindata-dgr/style.css
@@ -16977,3 +16977,13 @@ html {
     margin-left: auto !important;
   }
 }
+/* line 1, sass/_layout.scss */
+html, body {
+  height: 100%;
+}
+
+/* line 5, sass/_layout.scss */
+.fill-height {
+  min-height: 100%;
+  height: 100%;
+}
