Improved calendar structure

--- a/src/wp-content/themes/monstroid2-child/sass/style.scss
+++ b/src/wp-content/themes/monstroid2-child/sass/style.scss
@@ -20,3 +20,4 @@ Text Domain: monstroid2-child
 //@import "../vendor/twbs/bootstrap/scss/bootstrap-grid";
 
 @import "layout";
+@import "modules/modules";
