--- a/src/wp-content/themes/monstroid2-child/sass/style.scss
+++ b/src/wp-content/themes/monstroid2-child/sass/style.scss
@@ -15,9 +15,9 @@ Text Domain: monstroid2-child
 @import "compass/css3/background-clip";
 @import "compass/css3/appearance";
 
-//@import "../vendor/twbs/bootstrap/scss/bootstrap-reboot";
-//@import "../vendor/twbs/bootstrap/scss/bootstrap";
-//@import "../vendor/twbs/bootstrap/scss/bootstrap-grid";
+@import "../vendor/twbs/bootstrap/scss/bootstrap-reboot";
+@import "../vendor/twbs/bootstrap/scss/bootstrap";
+@import "../vendor/twbs/bootstrap/scss/bootstrap-grid";
 
 @import "layout";
 @import "modules/modules";
