--- a/src/wp-content/themes/monstroid2-child/style.css
+++ b/src/wp-content/themes/monstroid2-child/style.css
@@ -1,9 +1,9 @@
 /*!
-Theme Name: MarkenHund DeskDog
+Theme Name: Micro ERP Theme
 Theme URI:
 Author: All.In Data GmbH
 Author URI:
-Description: MarkenHund DeskDog theme based on Monstroid2 (child theme).
+Description: Micro ERP Theme theme based on Monstroid2 (child theme).
 Template: monstroid2
 Version: 1.0.0
 License: proprietary
